make action_helper a singleton

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -79,7 +79,7 @@
     "    print(traceback.format_exc())\n",
     "\n",
     "action_mapper = ActionMapper()\n",
-    "action_helper = ActionHelper(g)\n"
+    "action_helper = ActionHelper()\n"
    ]
   },
   {
@@ -124,7 +124,7 @@
    ],
    "source": [
     "print(g.active_step())\n",
-    "print(\"\\n\".join([f\"{i}: {str(action)}\" for i, action in enumerate(action_helper.get_all_choices_limited())]))"
+    "print(\"\\n\".join([f\"{i}: {str(action)}\" for i, action in enumerate(action_helper.get_all_choices_limited(g))]))"
    ]
   },
   {
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "g.process_action(action_helper.get_all_choices_limited()[0])"
+    "g.process_action(action_helper.get_all_choices_limited(g)[0])"
    ]
   },
   {
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "for action in action_helper.get_all_choices_limited():\n",
+    "for action in action_helper.get_all_choices_limited(g):\n",
     "    print(action_mapper.get_index_for_action(action))"
    ]
   },
@@ -3537,9 +3537,9 @@
     }
    ],
    "source": [
-    "action_helper = ActionHelper(g)\n",
+    "action_helper = ActionHelper()\n",
     "action_helper.print_enabled = True\n",
-    "action_helper.print_summary()"
+    "action_helper.print_summary(g)"
    ]
   },
   {
@@ -3592,7 +3592,7 @@
     "game_class = game_map.game_by_title(\"1830\")\n",
     "players = {\"1\": \"Player 1\", \"2\": \"Player 2\", \"3\": \"Player 3\", \"4\": \"Player 4\"}\n",
     "game =  game_class(players)\n",
-    "action_helper = ActionHelper(game)"
+    "action_helper = ActionHelper()"
    ]
   },
   {
@@ -3617,8 +3617,8 @@
     }
    ],
    "source": [
-    "game.process_action(action_helper.get_all_choices_limited()[-1])\n",
-    "action_helper.get_all_choices_limited()"
+    "game.process_action(action_helper.get_all_choices_limited(g)[-1])\n",
+    "action_helper.get_all_choices_limited(g)"
    ]
   },
   {
@@ -3763,7 +3763,7 @@
    ],
    "source": [
     "action_helper.print_enabled = True\n",
-    "action_helper.print_summary()\n"
+    "action_helper.print_summary(g)\n"
    ]
   },
   {
@@ -3849,113 +3849,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100: 100%|██████████| 4/4 [00:00<00:00,  5.18it/s, Total Loss=8.2532, P Loss=6.6880, V Loss=1.5652]  \n",
-      "Epoch 2/100: 100%|██████████| 4/4 [00:00<00:00,  8.23it/s, Total Loss=6.0000, P Loss=4.7324, V Loss=1.2677]\n",
-      "Epoch 3/100: 100%|██████████| 4/4 [00:00<00:00,  9.52it/s, Total Loss=5.5727, P Loss=4.6236, V Loss=0.9491]\n",
-      "Epoch 4/100: 100%|██████████| 4/4 [00:00<00:00,  9.45it/s, Total Loss=5.0763, P Loss=4.2798, V Loss=0.7966]\n",
-      "Epoch 5/100: 100%|██████████| 4/4 [00:00<00:00,  9.32it/s, Total Loss=4.6523, P Loss=4.0594, V Loss=0.5929]\n",
-      "Epoch 6/100: 100%|██████████| 4/4 [00:00<00:00,  9.50it/s, Total Loss=4.5599, P Loss=4.1741, V Loss=0.3858]\n",
-      "Epoch 7/100: 100%|██████████| 4/4 [00:00<00:00,  9.71it/s, Total Loss=4.3518, P Loss=3.9924, V Loss=0.3594]\n",
-      "Epoch 8/100: 100%|██████████| 4/4 [00:00<00:00,  9.72it/s, Total Loss=4.1650, P Loss=3.8504, V Loss=0.3146]\n",
-      "Epoch 9/100: 100%|██████████| 4/4 [00:00<00:00,  8.19it/s, Total Loss=4.0714, P Loss=3.7924, V Loss=0.2790]\n",
-      "Epoch 10/100: 100%|██████████| 4/4 [00:00<00:00,  9.73it/s, Total Loss=4.1497, P Loss=3.8674, V Loss=0.2823]\n",
-      "Epoch 11/100: 100%|██████████| 4/4 [00:00<00:00,  9.60it/s, Total Loss=3.8636, P Loss=3.6179, V Loss=0.2457]\n",
-      "Epoch 12/100: 100%|██████████| 4/4 [00:00<00:00,  9.61it/s, Total Loss=3.9076, P Loss=3.6773, V Loss=0.2303]\n",
-      "Epoch 13/100: 100%|██████████| 4/4 [00:00<00:00,  9.46it/s, Total Loss=3.8023, P Loss=3.5291, V Loss=0.2732]\n",
-      "Epoch 14/100: 100%|██████████| 4/4 [00:00<00:00,  9.66it/s, Total Loss=3.9427, P Loss=3.6712, V Loss=0.2715]\n",
-      "Epoch 15/100: 100%|██████████| 4/4 [00:00<00:00,  9.67it/s, Total Loss=3.5792, P Loss=3.3780, V Loss=0.2013]\n",
-      "Epoch 16/100: 100%|██████████| 4/4 [00:00<00:00,  8.31it/s, Total Loss=3.7125, P Loss=3.4841, V Loss=0.2284]\n",
-      "Epoch 17/100: 100%|██████████| 4/4 [00:00<00:00,  9.66it/s, Total Loss=3.7139, P Loss=3.4771, V Loss=0.2368]\n",
-      "Epoch 18/100: 100%|██████████| 4/4 [00:00<00:00,  9.62it/s, Total Loss=3.7796, P Loss=3.4908, V Loss=0.2888]\n",
-      "Epoch 19/100: 100%|██████████| 4/4 [00:00<00:00,  9.63it/s, Total Loss=3.5993, P Loss=3.3668, V Loss=0.2326]\n",
-      "Epoch 20/100: 100%|██████████| 4/4 [00:00<00:00,  9.55it/s, Total Loss=3.7516, P Loss=3.6052, V Loss=0.1465]\n",
-      "Epoch 21/100: 100%|██████████| 4/4 [00:00<00:00,  9.73it/s, Total Loss=3.4684, P Loss=3.2357, V Loss=0.2328]\n",
-      "Epoch 22/100: 100%|██████████| 4/4 [00:00<00:00,  9.42it/s, Total Loss=3.4116, P Loss=3.2349, V Loss=0.1767]\n",
-      "Epoch 23/100: 100%|██████████| 4/4 [00:00<00:00,  8.39it/s, Total Loss=3.4743, P Loss=3.2588, V Loss=0.2155]\n",
-      "Epoch 24/100: 100%|██████████| 4/4 [00:00<00:00,  9.48it/s, Total Loss=3.3937, P Loss=3.2256, V Loss=0.1681]\n",
-      "Epoch 25/100: 100%|██████████| 4/4 [00:00<00:00,  9.77it/s, Total Loss=3.4634, P Loss=3.2187, V Loss=0.2447]\n",
-      "Epoch 26/100: 100%|██████████| 4/4 [00:00<00:00,  9.66it/s, Total Loss=3.3506, P Loss=3.0890, V Loss=0.2616]\n",
-      "Epoch 27/100: 100%|██████████| 4/4 [00:00<00:00,  9.75it/s, Total Loss=3.3246, P Loss=3.0971, V Loss=0.2275]\n",
-      "Epoch 28/100: 100%|██████████| 4/4 [00:00<00:00,  9.59it/s, Total Loss=3.3668, P Loss=3.1813, V Loss=0.1855]\n",
-      "Epoch 29/100: 100%|██████████| 4/4 [00:00<00:00,  8.35it/s, Total Loss=3.4690, P Loss=3.2678, V Loss=0.2011]\n",
-      "Epoch 30/100: 100%|██████████| 4/4 [00:00<00:00,  9.74it/s, Total Loss=3.3812, P Loss=3.1614, V Loss=0.2198]\n",
-      "Epoch 31/100: 100%|██████████| 4/4 [00:00<00:00,  9.75it/s, Total Loss=3.3279, P Loss=3.1210, V Loss=0.2069]\n",
-      "Epoch 32/100: 100%|██████████| 4/4 [00:00<00:00,  9.67it/s, Total Loss=3.2439, P Loss=3.0735, V Loss=0.1704]\n",
-      "Epoch 33/100: 100%|██████████| 4/4 [00:00<00:00,  9.67it/s, Total Loss=3.1713, P Loss=2.9084, V Loss=0.2629]\n",
-      "Epoch 34/100: 100%|██████████| 4/4 [00:00<00:00,  9.67it/s, Total Loss=3.2525, P Loss=3.0413, V Loss=0.2112]\n",
-      "Epoch 35/100: 100%|██████████| 4/4 [00:00<00:00,  9.57it/s, Total Loss=3.1455, P Loss=2.9640, V Loss=0.1815]\n",
-      "Epoch 36/100: 100%|██████████| 4/4 [00:00<00:00,  7.90it/s, Total Loss=3.2686, P Loss=3.0402, V Loss=0.2284]\n",
-      "Epoch 37/100: 100%|██████████| 4/4 [00:00<00:00,  9.29it/s, Total Loss=3.1439, P Loss=2.9887, V Loss=0.1552]\n",
-      "Epoch 38/100: 100%|██████████| 4/4 [00:00<00:00,  9.45it/s, Total Loss=3.1226, P Loss=2.9287, V Loss=0.1940]\n",
-      "Epoch 39/100: 100%|██████████| 4/4 [00:00<00:00,  9.40it/s, Total Loss=3.1277, P Loss=2.9515, V Loss=0.1761]\n",
-      "Epoch 40/100: 100%|██████████| 4/4 [00:00<00:00,  9.34it/s, Total Loss=3.1014, P Loss=2.9247, V Loss=0.1767]\n",
-      "Epoch 41/100: 100%|██████████| 4/4 [00:00<00:00,  9.33it/s, Total Loss=3.0305, P Loss=2.8236, V Loss=0.2069]\n",
-      "Epoch 42/100: 100%|██████████| 4/4 [00:00<00:00,  9.40it/s, Total Loss=3.0642, P Loss=2.8702, V Loss=0.1940]\n",
-      "Epoch 43/100: 100%|██████████| 4/4 [00:00<00:00,  8.19it/s, Total Loss=3.0736, P Loss=2.7978, V Loss=0.2759]\n",
-      "Epoch 44/100: 100%|██████████| 4/4 [00:00<00:00,  9.50it/s, Total Loss=2.9700, P Loss=2.7372, V Loss=0.2328]\n",
-      "Epoch 45/100: 100%|██████████| 4/4 [00:00<00:00,  9.23it/s, Total Loss=3.0237, P Loss=2.7995, V Loss=0.2241]\n",
-      "Epoch 46/100: 100%|██████████| 4/4 [00:00<00:00,  9.62it/s, Total Loss=3.1467, P Loss=2.8300, V Loss=0.3167]\n",
-      "Epoch 47/100: 100%|██████████| 4/4 [00:00<00:00,  9.43it/s, Total Loss=3.0377, P Loss=2.8696, V Loss=0.1681]\n",
-      "Epoch 48/100: 100%|██████████| 4/4 [00:00<00:00,  9.70it/s, Total Loss=2.9191, P Loss=2.6992, V Loss=0.2198]\n",
-      "Epoch 49/100: 100%|██████████| 4/4 [00:00<00:00,  8.22it/s, Total Loss=3.0601, P Loss=2.8791, V Loss=0.1810]\n",
-      "Epoch 50/100: 100%|██████████| 4/4 [00:00<00:00,  9.46it/s, Total Loss=2.8999, P Loss=2.7361, V Loss=0.1638]\n",
-      "Epoch 51/100: 100%|██████████| 4/4 [00:00<00:00,  9.45it/s, Total Loss=3.0124, P Loss=2.8659, V Loss=0.1466]\n",
-      "Epoch 52/100: 100%|██████████| 4/4 [00:00<00:00,  9.54it/s, Total Loss=2.9401, P Loss=2.7987, V Loss=0.1414]\n",
-      "Epoch 53/100: 100%|██████████| 4/4 [00:00<00:00,  9.52it/s, Total Loss=2.8620, P Loss=2.7136, V Loss=0.1484]\n",
-      "Epoch 54/100: 100%|██████████| 4/4 [00:00<00:00,  9.45it/s, Total Loss=2.8950, P Loss=2.8089, V Loss=0.0861]\n",
-      "Epoch 55/100: 100%|██████████| 4/4 [00:00<00:00,  9.50it/s, Total Loss=2.7569, P Loss=2.6172, V Loss=0.1397]\n",
-      "Epoch 56/100: 100%|██████████| 4/4 [00:00<00:00,  8.32it/s, Total Loss=2.8336, P Loss=2.7264, V Loss=0.1072]\n",
-      "Epoch 57/100: 100%|██████████| 4/4 [00:00<00:00,  9.56it/s, Total Loss=2.9057, P Loss=2.8023, V Loss=0.1034]\n",
-      "Epoch 58/100: 100%|██████████| 4/4 [00:00<00:00,  9.35it/s, Total Loss=2.8803, P Loss=2.7855, V Loss=0.0948]\n",
-      "Epoch 59/100: 100%|██████████| 4/4 [00:00<00:00,  9.40it/s, Total Loss=2.7981, P Loss=2.6773, V Loss=0.1208]\n",
-      "Epoch 60/100: 100%|██████████| 4/4 [00:00<00:00,  9.39it/s, Total Loss=2.7637, P Loss=2.6473, V Loss=0.1164]\n",
-      "Epoch 61/100: 100%|██████████| 4/4 [00:00<00:00,  9.68it/s, Total Loss=2.8753, P Loss=2.7895, V Loss=0.0858]\n",
-      "Epoch 62/100: 100%|██████████| 4/4 [00:00<00:00,  9.54it/s, Total Loss=2.7961, P Loss=2.6840, V Loss=0.1121]\n",
-      "Epoch 63/100: 100%|██████████| 4/4 [00:00<00:00,  8.12it/s, Total Loss=2.7683, P Loss=2.6433, V Loss=0.1250]\n",
-      "Epoch 64/100: 100%|██████████| 4/4 [00:00<00:00,  9.25it/s, Total Loss=2.6658, P Loss=2.5451, V Loss=0.1207]\n",
-      "Epoch 65/100: 100%|██████████| 4/4 [00:00<00:00,  9.45it/s, Total Loss=2.7061, P Loss=2.6029, V Loss=0.1032]\n",
-      "Epoch 66/100: 100%|██████████| 4/4 [00:00<00:00,  8.83it/s, Total Loss=2.6819, P Loss=2.6215, V Loss=0.0603]\n",
-      "Epoch 67/100: 100%|██████████| 4/4 [00:00<00:00,  9.62it/s, Total Loss=2.6551, P Loss=2.5430, V Loss=0.1121]\n",
-      "Epoch 68/100: 100%|██████████| 4/4 [00:00<00:00,  9.76it/s, Total Loss=2.6802, P Loss=2.5638, V Loss=0.1164]\n",
-      "Epoch 69/100: 100%|██████████| 4/4 [00:00<00:00,  8.19it/s, Total Loss=2.7623, P Loss=2.6635, V Loss=0.0988]\n",
-      "Epoch 70/100: 100%|██████████| 4/4 [00:00<00:00,  9.49it/s, Total Loss=2.6258, P Loss=2.5310, V Loss=0.0948]\n",
-      "Epoch 71/100: 100%|██████████| 4/4 [00:00<00:00,  9.66it/s, Total Loss=2.6775, P Loss=2.5826, V Loss=0.0949]\n",
-      "Epoch 72/100: 100%|██████████| 4/4 [00:00<00:00,  9.55it/s, Total Loss=2.7531, P Loss=2.6755, V Loss=0.0776]\n",
-      "Epoch 73/100: 100%|██████████| 4/4 [00:00<00:00,  9.45it/s, Total Loss=2.5890, P Loss=2.4734, V Loss=0.1155]\n",
-      "Epoch 74/100: 100%|██████████| 4/4 [00:00<00:00,  9.23it/s, Total Loss=2.7087, P Loss=2.5881, V Loss=0.1207]\n",
-      "Epoch 75/100: 100%|██████████| 4/4 [00:00<00:00,  9.48it/s, Total Loss=2.6311, P Loss=2.4931, V Loss=0.1379]\n",
-      "Epoch 76/100: 100%|██████████| 4/4 [00:00<00:00,  8.16it/s, Total Loss=2.6036, P Loss=2.5130, V Loss=0.0905]\n",
-      "Epoch 77/100: 100%|██████████| 4/4 [00:00<00:00,  9.67it/s, Total Loss=2.5613, P Loss=2.4579, V Loss=0.1034]\n",
-      "Epoch 78/100: 100%|██████████| 4/4 [00:00<00:00,  9.63it/s, Total Loss=2.6530, P Loss=2.5825, V Loss=0.0705]\n",
-      "Epoch 79/100: 100%|██████████| 4/4 [00:00<00:00,  9.50it/s, Total Loss=2.5682, P Loss=2.4259, V Loss=0.1422]\n",
-      "Epoch 80/100: 100%|██████████| 4/4 [00:00<00:00,  9.39it/s, Total Loss=2.5992, P Loss=2.5389, V Loss=0.0603]\n",
-      "Epoch 81/100: 100%|██████████| 4/4 [00:00<00:00,  9.65it/s, Total Loss=2.5726, P Loss=2.4863, V Loss=0.0862]\n",
-      "Epoch 82/100: 100%|██████████| 4/4 [00:00<00:00,  9.68it/s, Total Loss=2.5224, P Loss=2.4146, V Loss=0.1078]\n",
-      "Epoch 83/100: 100%|██████████| 4/4 [00:00<00:00,  8.26it/s, Total Loss=2.5687, P Loss=2.4610, V Loss=0.1078]\n",
-      "Epoch 84/100: 100%|██████████| 4/4 [00:00<00:00,  9.52it/s, Total Loss=2.4808, P Loss=2.3817, V Loss=0.0991]\n",
-      "Epoch 85/100: 100%|██████████| 4/4 [00:00<00:00,  9.32it/s, Total Loss=2.4876, P Loss=2.4057, V Loss=0.0819]\n",
-      "Epoch 86/100: 100%|██████████| 4/4 [00:00<00:00,  9.51it/s, Total Loss=2.4520, P Loss=2.3650, V Loss=0.0870]\n",
-      "Epoch 87/100: 100%|██████████| 4/4 [00:00<00:00,  9.91it/s, Total Loss=2.5050, P Loss=2.3757, V Loss=0.1293]\n",
-      "Epoch 88/100: 100%|██████████| 4/4 [00:00<00:00,  9.69it/s, Total Loss=2.5334, P Loss=2.4299, V Loss=0.1034]\n",
-      "Epoch 89/100: 100%|██████████| 4/4 [00:00<00:00,  8.48it/s, Total Loss=2.5148, P Loss=2.4286, V Loss=0.0862]\n",
-      "Epoch 90/100: 100%|██████████| 4/4 [00:00<00:00,  9.55it/s, Total Loss=2.5396, P Loss=2.4275, V Loss=0.1121]\n",
-      "Epoch 91/100: 100%|██████████| 4/4 [00:00<00:00,  9.77it/s, Total Loss=2.4630, P Loss=2.3854, V Loss=0.0776]\n",
-      "Epoch 92/100: 100%|██████████| 4/4 [00:00<00:00,  9.63it/s, Total Loss=2.5513, P Loss=2.4435, V Loss=0.1078]\n",
-      "Epoch 93/100: 100%|██████████| 4/4 [00:00<00:00,  9.74it/s, Total Loss=2.4504, P Loss=2.3900, V Loss=0.0603]\n",
-      "Epoch 94/100: 100%|██████████| 4/4 [00:00<00:00,  9.67it/s, Total Loss=2.5603, P Loss=2.4828, V Loss=0.0776]\n",
-      "Epoch 95/100: 100%|██████████| 4/4 [00:00<00:00,  9.51it/s, Total Loss=2.4184, P Loss=2.2934, V Loss=0.1250]\n",
-      "Epoch 96/100: 100%|██████████| 4/4 [00:00<00:00,  8.38it/s, Total Loss=2.4072, P Loss=2.3382, V Loss=0.0690]\n",
-      "Epoch 97/100: 100%|██████████| 4/4 [00:00<00:00,  9.86it/s, Total Loss=2.5226, P Loss=2.4105, V Loss=0.1121]\n",
-      "Epoch 98/100: 100%|██████████| 4/4 [00:00<00:00,  9.72it/s, Total Loss=2.4460, P Loss=2.3985, V Loss=0.0475]\n",
-      "Epoch 99/100: 100%|██████████| 4/4 [00:00<00:00,  9.60it/s, Total Loss=2.4651, P Loss=2.3789, V Loss=0.0862]\n",
-      "Epoch 100/100: 100%|██████████| 4/4 [00:00<00:00,  9.67it/s, Total Loss=2.4579, P Loss=2.3674, V Loss=0.0905]\n"
+      "INFO:rl18xx.agent.alphazero.encoder:Calculated number of map node features: 50\n",
+      "Epoch 1/1: 100%|██████████| 4/4 [00:00<00:00,  5.09it/s, Total Loss=2.6862, P Loss=2.6215, V Loss=0.0646]\n",
+      "INFO:rl18xx.agent.alphazero.train:Epoch 1 Summary: Avg Total Loss: 2.5834, Avg P Loss: 2.4813, Avg V Loss: 0.1021\n",
+      "INFO:rl18xx.agent.alphazero.train:Evaluation on val_loader after 1 epochs: Avg Total Loss: 2.4066, Avg P Loss: 2.3108, Avg V Loss: 0.0958\n",
+      "INFO:rl18xx.agent.alphazero.model:Successfully saved weights to model_checkpoints/AlphaZeroModel_20250527_133951/checkpoint.pth\n"
      ]
     }
    ],
