--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -3548,7 +3548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#g.process_action(action_helper.get_all_choices_limited()[-4])"
+    "#g.process_action(action_helper.get_all_choices_limited(g)[-4])"
    ]
   },
   {
